<resources>
    <string name="app_name">DU-最美新娘</string>

    <!--activity_main.xml-->
    <string name="main_redio_btn_1">首页</string>
    <string name="main_redio_btn_2">发现</string>
    <string name="main_redio_btn_3">我</string>

    <string name="count_of_people_love_it">%1$d人喜欢</string>
    
    <item type="id" name="tag_home_adapter"></item>


    <array name="week">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </array>

    <!--fragment_owner.xml-->
    <string name="owner_title">最美新娘</string>
    <string name="owner_subtitle">轻松注册，即可永久保存你的所爱\n换了手机也找得到哦</string>
    <string name="btn_registe">注册</string>
    <string name="owner_has_account">已有帐号？<u>点击登陆</u></string>

    <!--activity_account_login-->
    <string name="login_username_hint">请输入您的账号(Email地址)</string>
    <string name="login_password_hint">请输入您的密码</string>
    <string name="login_btn_text">登录</string>
    <string name="login_pwd_forget">忘记密码？</string>
    <string name="login_self_account_subtitle">使用Dress账号登录</string>
    <string name="login_other_account_subtitle">使用社交网络账号登录</string>
    <string name="social_account_weixin">微信</string>
    <string name="social_account_sina">新浪微博</string>
    <string name="social_account_qq">QQ</string>




    <!--activity_account_registe.xml-->
    <string name="signup_password_hint">请设置您的密码(长度在6-16之间)</string>
    <string name="signup_btn">注册</string>
    <string name="signup_notename_hint">昵称</string>
    <string name="signup_success">注册成功</string>

    <string name="text_ok">确定</string>
    <string name="text_back">返回</string>
    <string name="text_next">下一步</string>

    <string name="msg_error_email_empty">邮箱地址不能为空</string>
    <string name="msg_error_email_invalid">邮箱地址不合法</string>
    <string name="msg_error_pwd_empty">密码不能为空</string>
    <string name="msg_error_pwd_invalid">密码长度必须介于6-16位之间</string>
    <string name="msg_loading">请稍等.....</string>
    <string name="signup_email_validate_code_send">验证码已发送到邮箱，请查收</string>
    <string name="sign_up_title">注册</string>
    <string name="msg_error_notename_empty">昵称不能为空</string>
    <string name="signup_email_validate_introduce">验证码已经发送到邮箱</string>
    <string name="msg_error_code_empty">验证码不能为空</string>
    <string name="msg_error_email_has_signup">该邮箱已经被注册。</string>
    <string name="msg_error_params_exception">参数异常</string>
    <string name="msg_info_protocal">注册即表示同意<u>DU用户协议</u></string>


    <!--找回密码-->
    <string name="forget_pwd_title">找回密码</string>
    <string name="forget_pwd_btn">获取密码</string>

    <!--引导页面-->
    <item name="guide_container" type="id"/>
    <string name="welcome">This activity is just a luncher, to fully demo the guide show.\n\nYou need create you own Activity extends from AbsGuideActivity and your own List&lt;SinglePage&gt;\n\nYou could use either the guideshowlib.jar or source code as you wish. :)\n\nDon\'t forget add guideshowlib.jar and android-support-v4.jar to your libs folder.</string>
    <string name="entry">Entry</string>

<!--设置页面-->
    <string name="setting_title">设置</string>
    <string name="setting_jianjie">简介</string>
    <string name="setting_welcome">欢迎页</string>
    <string name="setting_protocol">用户协议</string>
    <string name="setting_website">DU官网</string>


    <!--activity_page-->
    <string name="page_title">专栏的名称</string>
    <string name="page_counts_pic">47张图片</string>
    <string name="page_counts_point">｜</string>
    <string name="page_counts_love">47人喜欢</string>
    <string name="page_via_author">by zhou_guobao</string>

</resources>
