<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@mipmap/du_dress_icon_108" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/owner_subtitle"
        android:textColor="@color/gray_6c"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_registe"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/btn_background_style"
        android:text="@string/btn_registe"
        android:textColor="@drawable/btn_textcolor_style"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_registe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/owner_has_account"
        android:textColor="@color/gray_6c" />

</RelativeLayout>