<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_f2"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!--<include layout="@layout/layout_head" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:singleLine="true"
            android:gravity="center"
            android:hint="邮件" />

        <EditText
            android:id="@+id/ed_pwd"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:gravity="center"
            android:singleLine="true"
            android:hint="密码" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@null"
        android:text="@string/msg_info_protocal"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_dc"
        android:padding="10dp"
        android:text="@string/text_next"
        android:id="@+id/btn_signup"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_signin"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/login_btn_text"
        android:textColor="@color/blue" />
</LinearLayout>